<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.ejerciciossqlite.Actividad2">

    <TextView
        android:id="@+id/textViewIsbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isbn"
        android:layout_marginTop="18dp"
        android:layout_marginRight="10dp"/>
    <EditText
        android:id="@+id/editTextIsbn"
        android:layout_toEndOf="@+id/textViewIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewIsbn"
        android:text="@string/titulo"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"/>
    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_toEndOf="@+id/textViewTitulo"
        android:layout_below="@+id/textViewIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textViewGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitulo"
        android:text="@string/genero"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/editTextGenero"
        android:layout_toEndOf="@+id/textViewGenero"
        android:layout_below="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/textViewNumPaginas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewGenero"
        android:text="@string/numPaginas"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"/>
    <EditText
        android:id="@+id/editTextNumPaginas"
        android:layout_toEndOf="@+id/textViewNumPaginas"
        android:layout_below="@+id/textViewGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/buttonInsertar"
        android:layout_below="@+id/textViewNumPaginas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonInsertar"
        android:layout_marginTop="20dp"
        android:textSize="13dp"
        android:onClick="pulsados"/>
    <Button
        android:id="@+id/buttonActualizar"
        android:layout_toEndOf="@+id/buttonInsertar"
        android:layout_below="@+id/textViewNumPaginas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonActualizar"
        android:layout_marginTop="20dp"
        android:textSize="13dp"
        android:onClick="pulsados"/>
    <Button
        android:id="@+id/buttonEliminar"
        android:layout_toEndOf="@+id/buttonActualizar"
        android:layout_below="@+id/textViewNumPaginas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEliminar"
        android:layout_marginTop="20dp"
        android:textSize="13dp"
        android:onClick="pulsados"/>
    <Button
        android:id="@+id/buttonConsultar"
        android:layout_toEndOf="@+id/buttonEliminar"
        android:layout_below="@+id/textViewNumPaginas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonConsultar"
        android:layout_marginTop="20dp"
        android:textSize="13dp"
        android:onClick="pulsados"/>

    <TextView
        android:id="@+id/textViewContenido"
        android:layout_below="@+id/buttonInsertar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
